--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -10,3 +10,19 @@ user.active=Активный
 user.registered=Зарегистрирован
 meal.title=Моя еда
 common.select=Выбрать
+common.save=Сохранить
+common.delete=Удалить
+common.filter=Фильтровать
+common.cancel=Отменить
+common.update=Изменить
+meal.addMeal=Добавить еду
+meal.fromDate=От даты (включительно):
+meal.toDate=До даты (исключительно):
+meal.fromTime=От времени (включительно):
+meal.toTime=До времени (исключительно):
+meal.date=Дата
+meal.description=Описание
+meal.calories=Калории
+meal.dateTime=Дата и время
+meal.update=Редактировать еду
+meal.create=Создать еду
